# procwire-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
benches/: throughput.rs
docs/: 01-PROTOCOL-SPEC.md  02-PACKAGE-PLAN.md  03-TASK-PLAN.md
docs/TASKS/: README.md
docs/TASKS/done/: TASK-00-bootstrap.md  TASK-00b-claude-md.md  TASK-01-wire-format.md  TASK-02-frame-buffer.md  TASK-03-frame-struct.md  TASK-04-codec-trait-raw.md  TASK-05-msgpack-codec.md  TASK-06-pipe-listener.md  TASK-07-stdio.md  TASK-08-init-message.md  TASK-09-handler-registry.md  TASK-10-request-context.md  TASK-11-client-builder.md  TASK-12-client-runtime.md  TASK-13-unit-tests.md  TASK-14-e2e-tests.md  TASK-15-examples.md  TASK-16-ci-cd.md
examples/: echo.rs  events.rs  stream.rs
src/: backpressure.rs  client.rs  error.rs  lib.rs  writer.rs
src/codec/: mod.rs  msgpack.rs  raw.rs
src/control/: init.rs  mod.rs  stdio.rs
src/handler/: context.rs  mod.rs  registry.rs
src/protocol/: frame.rs  frame_buffer.rs  header_pool.rs  mod.rs  wire_format.rs
src/transport/: mod.rs  pipe.rs
tests/: integration.rs
