[package]
name = "procwire-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for Procwire IPC — high-performance binary protocol"
license = "MIT"
keywords = ["ipc", "binary-protocol", "process-communication"]
categories = ["network-programming"]
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bytes = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
serde_bytes = "0.11"

[[bench]]
name = "throughput"
harness = false
