[package]
name = "procwire-client"
version = "1.0.0"
edition = "2021"
description = "Rust client SDK for Procwire IPC — high-performance binary protocol for Node.js ↔ Rust communication"
license = "MIT"
keywords = ["ipc", "binary-protocol", "interprocess", "msgpack", "nodejs"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.75"
repository = "https://github.com/SebastianWebdev/procwire-client-rs"
homepage = "https://github.com/SebastianWebdev/procwire-client-rs"
documentation = "https://docs.rs/procwire-client"
readme = "README.md"
authors = ["Sebastian Webdev"]
exclude = [
    "docs/",
    "AGENT_MEMORY.md",
    "CLAUDE.md",
    ".github/",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bytes = "1"
tracing = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
serde_bytes = "0.11"

[[bench]]
name = "throughput"
harness = false
